--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,17 @@
+@font-face {
+  font-family: 'Monsterrat';
+  font-style: normal;
+  src: local('Monsterrat'),
+  url('../fonts/Montserrat-VariableFont_wght.ttf') format('woff2');
+}
+
 body {
   padding: 24px;
+  font-family: 'Monsterrat', sans-serif;
+}
+
+h1 {
+  margin-bottom: 16px;
 }
 
 section {
@@ -24,13 +36,26 @@ textarea {
   width: 50%;
 }
 
+input, textarea, button {
+  font-family: 'Monsterrat', 'Arial', 'sans-serif';
+}
+
+button {
+  padding: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-radius: 4px;
+  border-width: 1px;
+  background-color: whitesmoke;
+}
+
 .instructions {
   display: inline-block;
   margin-bottom: 16px;
   font-size: 16px;
 }
 
-.content {
+#content {
   width: 60%;
   margin: auto;
 }
@@ -47,4 +72,8 @@ textarea {
 
 .col.col-small {
   max-width: 120px;
+}
+
+.results {
+  margin-top: 8px;
 }
