--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,11 +6,15 @@
 }
 
 body {
-  padding: 24px;
   font-family: 'Monsterrat', sans-serif;
+  max-height: 100vh;
 }
 
 h1 {
+  margin-bottom: 16px;
+}
+
+h4 {
   margin-bottom: 16px;
 }
 
@@ -51,7 +55,44 @@ button {
 
 #content {
   width: 60%;
+  padding: 24px;
+  max-height: 100%;
   margin: auto;
+}
+
+#output-wrapper {
+  display: flex;
+  width: 100%;
+  height: 60%;
+}
+
+.output {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid black;
+  margin-right: 16px;
+  min-height: 400px;
+  width: 50%;
+  max-width: 50%;
+  overflow-y: auto;
+  word-break: break-all;
+  max-height: 100%;
+}
+
+.output p {
+  margin-bottom: 8px;
+}
+
+.connected-status {
+  margin-left: 16px;
+}
+
+.connected-status.connected::before {
+  content: "🟢"
+}
+
+.connected-status.disconnected::before {
+  content: "🔴"
 }
 
 /**
@@ -60,6 +101,10 @@ button {
 
 .mb-16 {
   margin-bottom: 16px;
+}
+
+.mt-16 {
+  margin-top: 16px;
 }
 
 .instructions {
@@ -83,20 +128,4 @@ button {
   padding-right: 16px;
   display: flex;
   align-items: center;
-}
-
-.results {
-  margin-top: 8px;
-}
-
-.connected-status {
-  margin-left: 16px;
-}
-
-.connected-status.connected::before {
-  content: "🟢"
-}
-
-.connected-status.disconnected::before {
-  content: "🔴"
 }
